Better description for the next version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "title": "Soundcloud Music Downloader",
   "name": "scdl",
-  "version": "0.1.2",
-  "description": "The plugin is able to download music from http://www.soundcloud.com and set id3tag to the downloaded music. It will probably work only with Linux and needs the python script scdl (https://github.com/flyingrub/scdl) installed and configured",
+  "version": "0.1.3",
+  "description": "The plugin is able to download music from http://www.soundcloud.com and set id3tag to the downloaded music. It will probably work only with Linux and needs the python script scdl (https://github.com/flyingrub/scdl) installed and configured. Just right click on a song link on https://soundcloud.com/ and select 'Download this song'. After some seconds it should appear in the download folder you configured for scdl. It is very simple and fully free and opensource: https://github.com/sedrubal/scdl-firefox",
   "main": "index.js",
   "author": "sedrubal",
   "engines": {
